# SuperMario

./: .gitignore  CLEANER.sh  MAKER.sh  Makefile  README.md  main.cpp  runner.sh  tester.sh
Spring98-CA5-master/: .gitignore  README.md
Spring98-CA5-master/src/: .gitignore  AnimationIndexHandler.cpp  AnimationIndexHandler.h  AssetsAddresses.h  AutomaticMovingObject.cpp  AutomaticMovingObject.h  Block.cpp  Block.h  Brick.cpp  Brick.h  CMakeLists.txt  Coin.cpp  Coin.h  Collision.cpp  Collision.h  Enemy.cpp  Enemy.h  ExactRectangle.cpp  ExactRectangle.h  FlagBlock.cpp  FlagBlock.h  Game.cpp  Game.h  MapReader.cpp  MapReader.h  Mario.cpp  Mario.h  Mushroom.cpp  Mushroom.h  Object.cpp  Object.h  PipeBlock.cpp  PipeBlock.h  g.sh  main.cpp  makefile  utility.cpp  utility.h
src/: Collision.cpp  Collision.h  Game.cpp  Game.h  Goomba.cpp  Goomba.h  Manager.cpp  Manager.h  Mario.cpp  Mario.h  Obstacles.cpp  Obstacles.h  Powerops.cpp  Powerops.h  Projectile.cpp  Projectile.h  Shape.cpp  Shape.h  Sound.cpp  Sound.h  Texture.cpp  Texture.h  Troopa.cpp  Troopa.h  UI_box.cpp  UI_box.h  compiling_error.txt
